[FIX] web: user menu alignments on mobile
Since Bootstrap 5.3 upgrade, the user menu on small screen loosed its
paddings. This is due to misusing `dropdown-*` classes on non-dropdown
elements.

This commit fixes it by removing the `dropdown-item` and
`dropdown-divider` classes and replacing them by the proper utility
classes.

closes odoo/odoo#163325

--- a/addons/web/static/src/webclient/burger_menu/burger_menu.scss
+++ b/addons/web/static/src/webclient/burger_menu/burger_menu.scss
@@ -61,12 +61,6 @@
         li, button {
             @include o-hover-text-color(rgba($o-burger-base-color, .8), $o-burger-base-color);
         }
-
-        // ====== 'User Menu' spefic design rules
-        .o_user_menu_mobile .dropdown-divider {
-            margin-left: $dropdown-item-padding-x;
-            margin-right: $dropdown-item-padding-x;
-        }
     }
 }
 
